# vox-daemon

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.md  build-and-install.sh
.claude/agents/: ai-specialist.md  audio-specialist.md  gui-specialist.md  qa-reviewer.md
.devcontainer/: init-firewall.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/vox-capture/: Cargo.toml
crates/vox-capture/src/: error.rs  lib.rs  metrics.rs  mock.rs  resample.rs  source.rs  types.rs
crates/vox-capture/src/pw/: loop_thread.rs  mod.rs  registry.rs
crates/vox-capture/tests/: integration.rs
crates/vox-core/: Cargo.toml
crates/vox-core/src/: config.rs  error.rs  lib.rs  paths.rs  session.rs
crates/vox-diarize/: Cargo.toml
crates/vox-diarize/src/: clustering.rs  embeddings.rs  error.rs  lib.rs  model.rs  onnx_diarizer.rs  stub.rs  traits.rs
crates/vox-export/: Cargo.toml
crates/vox-export/src/: error.rs  factory.rs  lib.rs  traits.rs
crates/vox-export/src/affine/: auth.rs  graphql.rs  mod.rs  socket.rs  ydoc.rs
crates/vox-export/tests/: affine_http.rs
crates/vox-gui/: Cargo.toml
crates/vox-gui/src/: app.rs  browser.rs  error.rs  lib.rs  search.rs  settings.rs  theme.rs
crates/vox-notify/: Cargo.toml
crates/vox-notify/src/: desktop.rs  error.rs  lib.rs  notifier.rs
crates/vox-storage/: Cargo.toml
crates/vox-storage/src/: json_export.rs  lib.rs  markdown.rs  store.rs  text.rs
crates/vox-summarize/: Cargo.toml
crates/vox-summarize/src/: client.rs  error.rs  factory.rs  lib.rs  ollama.rs  parse.rs  prompt.rs  stub.rs  traits.rs
crates/vox-transcribe/: Cargo.toml
crates/vox-transcribe/src/: lib.rs  model.rs  stub.rs  transcriber.rs  whisper.rs
crates/vox-tray/: Cargo.toml
crates/vox-tray/src/: error.rs  event.rs  lib.rs  mock.rs  system_tray.rs  tray.rs
docs/: AGENT_GUIDE.md  progress.md  qa-log.md
vox-daemon/: Cargo.toml
vox-daemon/src/: audio_merge.rs  audio_save.rs  daemon.rs  logging.rs  main.rs  recording.rs  transcript_postprocess.rs
