[workspace]
resolver = "3"
members = [
    "crates/vox-core",
    "crates/vox-capture",
    "crates/vox-transcribe",
    "crates/vox-summarize",
    "crates/vox-storage",
    "crates/vox-export",
    "crates/vox-diarize",
    "crates/vox-gui",
    "crates/vox-tray",
    "crates/vox-notify",
    "vox-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rfd = "0.15"
hound = "3.5"

# Workspace crate cross-references
vox-core = { path = "crates/vox-core" }
vox-capture = { path = "crates/vox-capture" }
vox-transcribe = { path = "crates/vox-transcribe" }
vox-summarize = { path = "crates/vox-summarize" }
vox-storage = { path = "crates/vox-storage" }
vox-export = { path = "crates/vox-export" }
vox-gui = { path = "crates/vox-gui" }
vox-tray = { path = "crates/vox-tray" }
vox-diarize = { path = "crates/vox-diarize" }
vox-notify = { path = "crates/vox-notify" }
