[package]
name = "vox-diarize"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Speaker diarization for vox-daemon using ONNX speaker embeddings."

[dependencies]
vox-core = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }

[dependencies.ort]
version = "2.0.0-rc.12"
optional = true

[dependencies.ndarray]
version = "0.16"
optional = true

[dev-dependencies]
tempfile = "3"

[features]
default = []
onnx = ["dep:ort", "dep:ndarray"]
