[package]
name = "vox-export"
description = "Plugin-based exporter for pushing sessions to third-party knowledgebases (Affine, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
vox-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
base64 = "0.22"
yrs = "0.23"
rust_socketio = { version = "0.6", features = ["async"] }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
