[package]
name = "vox-gui"
description = "iced-based settings window and transcript browser for Vox Daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
vox-core = { workspace = true }
vox-storage = { workspace = true }
vox-capture = { workspace = true }
vox-summarize = { workspace = true }
vox-export = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rfd = { workspace = true, optional = true }

[dependencies.iced]
version = "0.14"
optional = true
features = ["tokio"]

[features]
default = []
ui = ["dep:iced", "dep:rfd"]
pw = ["vox-capture/pw"]

[dev-dependencies]
tempfile = "3"
