[package]
name = "vox-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Session storage, JSON persistence, and Markdown export for Vox Daemon"

[dependencies]
vox-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
